app/assets/stylesheets/partials/shared/message.scss
.message-box {
  position: absolute;
  top: 70px;
  width: 100%;
  height: 30px;
  font-size: 13px;
  text-align: center;
  background-color: #f9eb24;
  transform: translate(0, -40px);
  transition: opacity 0.5s, transform 0.8s;
  opacity: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.flash-animation {
  transform: none;
  opacity: 1;
}

